# multipa

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  main.py  multipa.yml  multipa_cuda121.yml  multipa_cuda124.yml  multipa_new.yml  preprocess.py  preprocess.sh  preprocess_slurm.sh  pyproject.toml  requirements.txt  setup.sh  setup_slurm.sh  train.sh  train_slurm.sh
.github/workflows/: python_package.yml
Evaluation/: model_evaluation.ipynb
converter/: buckeye_to_ipa.py
data/evaluation_results/: README.md
data/evaluation_results/aggregate_metrics/: baseline_eval.csv  data_seed_bs64_eval.csv  data_seed_eval.csv  epitran_allosaurus_eval.csv  full_dataset_eval.csv  gender_split_0_female_eval.csv  gender_split_100_female_eval.csv  gender_split_30_female_eval.csv  gender_split_70_female_eval.csv  train_duration_100_eval.csv  train_duration_12800_eval.csv  train_duration_1600_eval.csv  train_duration_1600_hyperparam_eval.csv  train_duration_20000_eval.csv  train_duration_200_eval.csv  train_duration_3200_eval.csv  train_duration_400_eval.csv  train_duration_400_hyperparam_eval.csv  train_duration_6400_eval.csv  train_duration_800_eval.csv  train_duration_800_hyperparam_eval.csv  vary_individuals_eval.csv  wav2vec2-xlsr-53-espeak-cv-ft_baseline_eval.csv
data/evaluation_results/detailed_predictions/: allosaurus_eng2102_eng_detailed_predictions.csv  allosaurus_eng2102_ipa_detailed_predictions.csv  allosaurus_uni2005_eng_detailed_predictions.csv  allosaurus_uni2005_ipa_detailed_predictions.csv  ctaguchi_wav2vec2-large-xlsr-japlmthufielta-ipa-plus-2000_detailed_predictions.csv  ctaguchi_wav2vec2-large-xlsr-japlmthufielta-ipa1000-ns_detailed_predictions.csv  data_models_data_seed_1_wav2vec2-large-xlsr-buckeye-ipa_detailed_predictions.csv  data_models_data_seed_2_wav2vec2-large-xlsr-buckeye-ipa_detailed_predictions.csv  (+126 more)
data/timit_results/: README.md
notebooks/: amp_evaluation_analysis.ipynb  by_phone_error_rates.ipynb  check_overfitting.ipynb  evaluation_extras.ipynb  forced_alignment_example.ipynb  gmu_evaluation.ipynb  initial_evaluation_analysis.ipynb  train_duration_analysis.ipynb  upload_models.ipynb
notebooks/Evaluation/: README.md  model_evaluation.ipynb  timit_to_ipa.py
notebooks/amp_presentation/: amp_evaluation_analysis.ipynb  gender_split_train_data_durations.csv  timit_evaluation_analysis.ipynb  vowel_overlap_comparisons.ipynb
notebooks/timit_evaluation/: README.md  model_evaluation.ipynb  model_evaluation_espeak_only.ipynb  timit_by_phone_error_rates.ipynb  timit_dialect_facebook_wav2vec2-lv-60-espeak-cv-ft_comparison.csv  timit_facebook_wav2vec2-lv-60-espeak-cv-ft_evaluation_summary.csv  timit_to_ipa.py
scripts/: buckeye_model.sh  buckeye_preprocess.sh  evaluate.sh  full_dataset_eval_with_edit_dist.sh  preprocess.sh  preprocess_slurm.sh  setup.sh  setup_slurm.sh  train.sh  train_slurm.sh  train_test.sh
scripts/buckeye_experiments/: EXPERIMENT_LOG.md  baseline_eval.sh  data_seed_1.sh  data_seed_2.sh  data_seed_3.sh  data_seed_4.sh  data_seed_bs64_1.sh  data_seed_bs64_2.sh  data_seed_bs64_3.sh  data_seed_bs64_4.sh  data_seed_bs64_eval.sh  data_seed_eval.sh  experiments.csv  gender_split_30_female_1.sh  gender_split_30_female_2.sh  gender_split_30_female_3.sh  gender_split_30_female_4.sh  gender_split_30_female_5.sh  gender_split_30_female_eval.sh  gender_split_70_female_1.sh  gender_split_70_female_2.sh  gender_split_70_female_3.sh  gender_split_70_female_4.sh  gender_split_70_female_5.sh  gender_split_70_female_eval.sh  hyperparam_tuning_1.sh  hyperparam_tuning_2.sh  hyperparam_tuning_3.sh  hyperparam_tuning_4.sh  hyperparam_tuning_5.sh  hyperparam_tuning_7.sh  hyperparam_tuning_xls-r-300m_1.sh  hyperparam_tuning_xls-r-300m_2.sh  hyperparam_tuning_xls-r-300m_3.sh  hyperparam_tuning_xls-r-300m_4.sh  hyperparam_tuning_xls-r-300m_5.sh  train_duration_100_samples_1.sh  train_duration_100_samples_2.sh  train_duration_100_samples_3.sh  train_duration_100_samples_4.sh  (+30 more)
src/multipa/: add_forvo.py  data_utils.py  evaluate.py  evaluation.py  main.py  preprocess.py  utils.py  visualization.py
tests/: conftest.py  test_converters.py  test_data_utils.py  test_evaluate.py  test_evaluation.py  test_main.py  test_preprocess.py
(+238 files in other folders)
